[MVVM]model重命名成员名-一次典型的数据迁移 涉及命令为： add-migration name-of-commit uppdate-database

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.EntityFrameWork/SimpleTrader.EntityFrameWork.csproj
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.EntityFrameWork/SimpleTrader.EntityFrameWork.csproj
@@ -17,6 +17,8 @@
     <Compile Remove="Migrations\20231219142422_switch to sql server.Designer.cs" />
     <Compile Remove="Migrations\20231219142555_switch to sql server.cs" />
     <Compile Remove="Migrations\20231219142555_switch to sql server.Designer.cs" />
+    <Compile Remove="Migrations\20240220140548_rename-stock-to-asset2.cs" />
+    <Compile Remove="Migrations\20240220140548_rename-stock-to-asset2.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
