--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/SimpleTrader.WPF.csproj
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/SimpleTrader.WPF.csproj
@@ -27,4 +27,10 @@
     </Resource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
