--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/SimpleTrader.WPF.csproj
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/SimpleTrader.WPF.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+    <PackageReference Include="PasswordBoxMVVM" Version="1.0.5" />
     <PackageReference Include="System.Diagnostics.EventLog" Version="6.0.0" />
   </ItemGroup>
 
