[WPF]MVVM 数据库切换为文件Db Sqlite

--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/appsettings.json
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "FINANCE_API_KEY": "VaC5TdHX96JjckFSQFJ9UeEn0q3GJaYn",
-    "default": "Server=(local)\\SQLEXPRESS;Initial Catalog=LifeRecorder;Integrated Security=True;Pooling=False"
+    "default": "Server=(local)\\SQLEXPRESS;Initial Catalog=LifeRecorder;Integrated Security=True;Pooling=False",
+    "sqlite": "Data Source=SimpleTrader.db"
   }
 }
