--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/SimpleTrader.WPF.csproj
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/SimpleTrader.WPF.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="HandyControl" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
