--- a/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/SimpleTrader.WPF.csproj
+++ b/MVVM/SimpleTrader.Domain/SimpleTrader.WPF/SimpleTrader.WPF.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="HandyControl" Version="3.1.0" />
+    <PackageReference Include="MaterialDesignColors" Version="1.2.7" />
+    <PackageReference Include="MaterialDesignThemes" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
