--- a/RuoYi-Vue-master/ruoyi-ui/package.json
+++ b/RuoYi-Vue-master/ruoyi-ui/package.json
@@ -48,6 +48,7 @@
     "js-beautify": "1.13.0",
     "js-cookie": "3.0.1",
     "jsencrypt": "3.0.0-rc.1",
+    "moment": "^2.30.1",
     "nprogress": "0.2.0",
     "quill": "1.3.7",
     "screenfull": "5.0.2",
@@ -58,6 +59,7 @@
     "vue-meta": "2.4.0",
     "vue-router": "3.4.9",
     "vuedraggable": "2.24.3",
+    "vuetify": "^2.2.11",
     "vuex": "3.6.0"
   },
   "devDependencies": {
