--- a/RuoYi-Vue-master/ruoyi-ui/package.json
+++ b/RuoYi-Vue-master/ruoyi-ui/package.json
@@ -61,7 +61,8 @@
     "vue-video-player": "^5.0.2",
     "vuedraggable": "2.24.3",
     "vuetify": "^2.2.11",
-    "vuex": "3.6.0"
+    "vuex": "3.6.0",
+    "vue-infinite-loading": "2.4.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.6",
