--- a/RuoYi-Vue-master/ruoyi-vue3/.gitignore
+++ b/RuoYi-Vue-master/ruoyi-vue3/.gitignore
@@ -9,7 +9,9 @@ yarn-error.log*
 tests/**/coverage/
 tests/e2e/reports
 selenium-debug.log
-
+src/assets/**/*.mp3
+src/assets/**/*.mp4
+src/assets/**/*.mkv
 # Editor directories and files
 .idea
 .vscode
