--- a/RuoYi-Vue-master/ruoyi-vue3/package.json
+++ b/RuoYi-Vue-master/ruoyi-vue3/package.json
@@ -33,9 +33,11 @@
     "vue": "3.4.31",
     "vue-cropper": "1.1.1",
     "vue-router": "4.4.0",
-    "vuetify": "^3.7.0"
+    "vuetify": "^3.7.0",
+    "vue-virtual-scroller": "2.0.0-beta.5"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.2",
     "@vitejs/plugin-vue": "5.0.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
