--- a/RuoYi-Vue-master/ruoyi-vue3/package.json
+++ b/RuoYi-Vue-master/ruoyi-vue3/package.json
@@ -47,6 +47,7 @@
     "unplugin-vue-setup-extend-plus": "1.0.1",
     "vite": "5.3.2",
     "vite-plugin-compression": "0.5.1",
-    "vite-plugin-svg-icons": "2.0.1"
+    "vite-plugin-svg-icons": "2.0.1",
+    "pinia-plugin-persistedstate": "3.2.1"
   }
 }
