--- a/RuoYi-Vue-master/ruoyi-system/pom.xml
+++ b/RuoYi-Vue-master/ruoyi-system/pom.xml
@@ -23,6 +23,16 @@
             <artifactId>ruoyi-common</artifactId>
         </dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
     </dependencies>
 
 </project>
