--- a/RuoYi-Vue-master/ruoyi-vue3/package.json
+++ b/RuoYi-Vue-master/ruoyi-vue3/package.json
@@ -33,13 +33,15 @@
     "vue": "3.4.31",
     "vue-cropper": "1.1.1",
     "vue-router": "4.4.0",
-    "vuetify": "^3.7.0",
-    "vue-virtual-scroller": "2.0.0-beta.5"
+    "vue-virtual-scroller": "2.0.0-beta.5",
+    "vuetify": "^3.7.0"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
+    "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "5.0.5",
     "autoprefixer": "^10.4.20",
+    "pinia-plugin-persistedstate": "3.2.1",
     "postcss": "^8.4.41",
     "sass": "1.77.5",
     "tailwindcss": "^3.4.10",
@@ -47,7 +49,6 @@
     "unplugin-vue-setup-extend-plus": "1.0.1",
     "vite": "5.3.2",
     "vite-plugin-compression": "0.5.1",
-    "vite-plugin-svg-icons": "2.0.1",
-    "pinia-plugin-persistedstate": "3.2.1"
+    "vite-plugin-svg-icons": "2.0.1"
   }
 }
