--- a/RuoYi-Vue-master/ruoyi-vue3/package.json
+++ b/RuoYi-Vue-master/ruoyi-vue3/package.json
@@ -27,6 +27,7 @@
     "fuse.js": "6.6.2",
     "js-cookie": "3.0.5",
     "jsencrypt": "3.3.2",
+    "justified-layout": "^4.1.0",
     "moment": "^2.30.1",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
