--- a/RuoYi-Vue-master/ruoyi-vue3/package.json
+++ b/RuoYi-Vue-master/ruoyi-vue3/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "mock": "vite --mode mock",
     "build:prod": "vite build",
     "build:stage": "vite build --mode staging",
     "preview": "vite preview"
