--- a/RuoYi-Vue-master/ruoyi-vue3/package.json
+++ b/RuoYi-Vue-master/ruoyi-vue3/package.json
@@ -45,7 +45,9 @@
     "@iconify/vue": "^4.1.2",
     "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "5.0.5",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "autoprefixer": "^10.4.20",
+    "leaflet": "^1.9.4",
     "pinia-plugin-persistedstate": "3.2.1",
     "postcss": "^8.4.41",
     "sass": "1.77.5",
