[OpenGL]模型加载(漫反射+高光)小车

--- a/OpenGL/vs/Demo/Lighting/imgui.ini
+++ b/OpenGL/vs/Demo/Lighting/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Lighting Controls]
-Pos=91,373
-Size=334,196
+Pos=2,33
+Size=345,247
+Collapsed=0
+
+[Window][Light Direction]
+Pos=77,37
+Size=530,304
 Collapsed=0
 
