--- a/OpenGL/vs/Demo/Demo/Demo.vcxproj
+++ b/OpenGL/vs/Demo/Demo/Demo.vcxproj
@@ -152,8 +152,21 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\glad.c" />
+    <ClCompile Include="..\Lighting\imgui\imgui.cpp" />
+    <ClCompile Include="..\Lighting\imgui\imgui_demo.cpp" />
+    <ClCompile Include="..\Lighting\imgui\imgui_draw.cpp" />
+    <ClCompile Include="..\Lighting\imgui\imgui_impl_glfw_gl3.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stb_image.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Lighting\imgui\imconfig.h" />
+    <ClInclude Include="..\Lighting\imgui\imgui.h" />
+    <ClInclude Include="..\Lighting\imgui\imgui_impl_glfw_gl3.h" />
+    <ClInclude Include="..\Lighting\imgui\imgui_internal.h" />
+    <ClInclude Include="..\Lighting\imgui\stb_rect_pack.h" />
+    <ClInclude Include="..\Lighting\imgui\stb_textedit.h" />
+    <ClInclude Include="..\Lighting\imgui\stb_truetype.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
