--- a/OpenGL/vs/Demo/EmptyWindow/EmptyWindow.vcxproj.filters
+++ b/OpenGL/vs/Demo/EmptyWindow/EmptyWindow.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="stb_image.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VisualizeSSAOKernel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
