[OpenGL]立方体颜色渐变

--- a/OpenGL/vs/Demo/EmptyWindow/EmptyWindow.vcxproj.filters
+++ b/OpenGL/vs/Demo/EmptyWindow/EmptyWindow.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="imgui\imgui_impl_glfw_gl3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TransitionMain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h">
