--- a/OpenGL/vs/Demo/EmptyWindow/EmptyWindow.vcxproj
+++ b/OpenGL/vs/Demo/EmptyWindow/EmptyWindow.vcxproj
@@ -161,7 +161,11 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="stb_image.cpp" />
-    <ClCompile Include="VisualizeSSAOKernel.cpp" />
+    <ClCompile Include="TransitionMain.cpp" />
+    <ClCompile Include="VisualizeSSAOKernel.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h" />
